src/objects/UniversityCourseContact__c.object
<CustomObject>
    <description>CORE adopted from UKHE - Contains the relationship between Unversity course and contact.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Active identifies if the contact is involved and has a role related to the course</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; +  Contact__r.Account.Id, Contact__r.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact: Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <description>CORE - used to capture the role type of the university course contact</description>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>This is the contact linked to the course.</description>
        <inlineHelpText>This is the contact linked to the course.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Contacts</relationshipLabel>
        <relationshipName>CourseContact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Number__c</fullName>
        <description>Used to attribute the number of Enrollment per Contact for a University Course</description>
        <label>Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Selling_Account__c</fullName>
        <description>Used to display the Primary Selling Account on the Course Contact Related List</description>
        <formula>HYPERLINK( Contact__r.Account.Primary_Selling_Account__r.Id , Contact__r.Account.Primary_Selling_Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Selling Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Enrollments__c</fullName>
        <formula>UniversityCourse__r.Total_Enrollments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Enrollments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniversityCourse__c</fullName>
        <description>This is the university course.</description>
        <inlineHelpText>This is the university course.</inlineHelpText>
        <label>Course</label>
        <referenceTo>UniversityCourse__c</referenceTo>
        <relationshipLabel>Course Contacts</relationshipLabel>
        <relationshipName>University_Course_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Course Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRSCT-{00000}</displayFormat>
        <label>Course Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>